# OBSW_Project

./: CMakeLists.txt  README.md  arduino_code.c  arduino_code.h  arduino_code.ino  autores.txt  i386_code.c  i386_code.h  test_arduino_code.cpp  test_i386_code.cpp
Part_C/: i386.c  i386_code.c
